--- a/brd-android/kyc/src/main/res/layout/fragment_exposed_person.xml
+++ b/brd-android/kyc/src/main/res/layout/fragment_exposed_person.xml
@@ -32,6 +32,7 @@
 
             <TextView
                 android:id="@+id/tv_title"
+                style="@style/TextStyle.Title5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="34dp"
@@ -44,6 +45,7 @@
 
             <TextView
                 android:id="@+id/tv_description"
+                style="@style/TextStyle.Body2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
