--- a/brd-android/kyc/src/main/res/layout/partial_kyc_toolbar.xml
+++ b/brd-android/kyc/src/main/res/layout/partial_kyc_toolbar.xml
@@ -41,7 +41,7 @@
 
         <TextView
             android:id="@+id/tv_title"
-            style="@style/Toolbar.Title"
+            style="@style/TextStyle.Title4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
