--- a/brd-android/fabriik-common/src/main/res/values/colors.xml
+++ b/brd-android/fabriik-common/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf_8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Light colors -->
     <color name="light_background_01">#FFFFFF</color>
