--- a/brd-android/fabriik-common/src/main/res/values/themes.xml
+++ b/brd-android/fabriik-common/src/main/res/values/themes.xml
@@ -1,2 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+
+    <style name="AppTheme.Fabriik" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">#E5E5E5</item>
+        <item name="android:textColor">@color/light_text_01</item>
+    </style>
+</resources>
