--- a/brd-android/kyc/src/main/res/drawable/ic_info_blue.xml
+++ b/brd-android/kyc/src/main/res/drawable/ic_info_blue.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="18">
   <path
       android:pathData="M8.1,4.5H9.9V6.3H8.1V4.5ZM8.1,8.1H9.9V13.5H8.1V8.1ZM9,0C4.032,0 0,4.032 0,9C0,13.968 4.032,18 9,18C13.968,18 18,13.968 18,9C18,4.032 13.968,0 9,0ZM9,16.2C5.031,16.2 1.8,12.969 1.8,9C1.8,5.031 5.031,1.8 9,1.8C12.969,1.8 16.2,5.031 16.2,9C16.2,12.969 12.969,16.2 9,16.2Z"
-      android:fillColor="#122348"/>
+      android:fillColor="@color/light_link_01"/>
 </vector>
