--- a/brd-android/kyc/src/main/res/values/views.xml
+++ b/brd-android/kyc/src/main/res/values/views.xml
@@ -6,6 +6,16 @@
         <item name="android:drawablePadding">4dp</item>
     </style>
 
+    <style name="Common.Tag" parent="TextStyle.Body2">
+        <item name="android:textColor">@color/light_inverse_text_01</item>
+        <item name="android:background">@drawable/bg_tag_black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
+
     <style name="AccountVerification.CardView" parent="">
         <item name="cardBackgroundColor">@color/white</item>
         <item name="cardCornerRadius">12dp</item>
@@ -21,16 +31,6 @@
         <item name="android:drawableStart">@drawable/ic_check_gray</item>
         <item name="android:drawablePadding">8dp</item>
         <item name="android:gravity">center</item>
-    </style>
-
-    <style name="AccountVerification.CardView.Tag" parent="TextStyle.Body2">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:background">@drawable/bg_tag_black</item>
-        <item name="android:gravity">center</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:paddingTop">2dp</item>
-        <item name="android:paddingEnd">8dp</item>
-        <item name="android:paddingBottom">2dp</item>
     </style>
 
     <style name="AccountVerification.CardView.BulletPoints" parent="TextStyle.Body2">
