--- a/brd-android/kyc/src/main/res/layout/fragment_personal_information.xml
+++ b/brd-android/kyc/src/main/res/layout/fragment_personal_information.xml
@@ -39,8 +39,7 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                app:contentPadding="16dp">
+                android:layout_marginTop="24dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
