--- a/brd-android/kyc/src/main/res/layout/fragment_personal_information.xml
+++ b/brd-android/kyc/src/main/res/layout/fragment_personal_information.xml
@@ -20,10 +20,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:clipToPadding="false">
+            android:paddingEnd="16dp">
 
             <TextView
                 android:id="@+id/tv_info"
@@ -63,32 +63,48 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
-                        android:textColor="@color/fabriik_gray_2"
                         android:text="@string/PersonalInformation.Section1.Subtitle"
+                        android:textColor="@color/fabriik_gray_2"
                         app:layout_constrainedWidth="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_section_1" />
 
-                    <EditText
-                        android:id="@+id/et_name"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/til_name"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:hint="@string/PersonalInformation.Name"
-                        app:layout_constraintEnd_toStartOf="@id/et_last_name"
+                        app:layout_constraintEnd_toStartOf="@id/til_last_name"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_section_1_subtitle" />
+                        app:layout_constraintTop_toBottomOf="@id/tv_section_1_subtitle">
 
-                    <EditText
-                        android:id="@+id/et_last_name"
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/et_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/til_last_name"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:hint="@string/PersonalInformation.LastName"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/et_name"
-                        app:layout_constraintTop_toTopOf="@id/et_name" />
+                        app:layout_constraintStart_toEndOf="@id/til_name"
+                        app:layout_constraintTop_toTopOf="@id/til_name">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/et_last_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <TextView
                         android:id="@+id/tv_section_2"
@@ -101,17 +117,24 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/et_name" />
+                        app:layout_constraintTop_toBottomOf="@id/til_name" />
 
-                    <EditText
-                        android:id="@+id/et_country"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/til_country"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
                         android:hint="@string/PersonalInformation.Country"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_section_2" />
+                        app:layout_constraintTop_toBottomOf="@id/tv_section_2">
+
+                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                            android:id="@+id/et_country"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="none" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <TextView
                         android:id="@+id/tv_section_3"
@@ -124,7 +147,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/et_country" />
+                        app:layout_constraintTop_toBottomOf="@id/til_country" />
 
                     <TextView
                         android:id="@+id/tv_section_3_info"
